# uitf-analytics

./: LICENSE  README.md  pyproject.toml
uitf_crawler/: scrapy.cfg
uitf_crawler/data/: data.csv  funds.csv
uitf_crawler/notebooks/: data.csv  exploration.ipynb
uitf_crawler/notebooks/data/: data.csv  funds.csv
uitf_crawler/uitf_crawler/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
uitf_crawler/uitf_crawler/spiders/: uitf_funds.py  uitf_performance.py  uitf_performance_ytd.py
