[tool.poetry]
name = "uitf-analytics"
version = "0.1.0"
description = ""
authors = ["Dave Emmanuel Q. Magno <d.e.magno13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
scrapy-user-agents = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
